--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "space-travel",
   "version": "0.0.1",
   "description": "landing page",
-  "main": "index.js",
+  "main": "./src/init.js",
   "scripts": {
     "start": "webpack --config webpack.config.js"
   },
   "author": "temirkhan",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -28,6 +36,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^4.0.0"
+    "clean-webpack-plugin": "^4.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
