Mod config files: webpack, eslint, babel

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,16 +1,24 @@
 env:
+  node: true
   browser: true
   es2021: true
+
 extends:
   - plugin:react/recommended
   - airbnb
+
+parser: "@babel/eslint-parser"  
+
 parserOptions:
   ecmaFeatures:
     jsx: true
   ecmaVersion: latest
   sourceType: module
+
 plugins:
   - react
+  - babel
+
 rules:
   no-console: 0
   import/extensions: 0 # FIXME: remove when rule will be adjusted for new nodejs version
