--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,22 @@
+root: true
+
+plugins:
+  - react
+  - functional
+  - testing-library
+
+extends:
+  - airbnb
+  - "plugin:functional/external-recommended"
+  - "plugin:functional/recommended"
+  - "plugin:react/recommended"
+  - "plugin:react-hooks/recommended"
+  - "plugin:testing-library/react"
+
 env:
   node: true
   browser: true
   es2021: true
-
-extends:
-  - plugin:react/recommended
-  - airbnb
 
 parser: "@babel/eslint-parser"  
 
@@ -15,11 +26,10 @@ parserOptions:
   ecmaVersion: latest
   sourceType: module
 
-plugins:
-  - react
-  - babel
-
 rules:
   no-console: 0
   import/extensions: 0 # FIXME: remove when rule will be adjusted for new nodejs version
+  functional/no-expression-statement: 0
+  functional/functional-parameters: 0
+  functional/immutable-data: 0
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
