Add packages for eslint config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "space-travel",
   "version": "0.0.1",
   "description": "landing page",
-  "main": "./src/init.js",
+  "main": "./src/init.jsx",
   "scripts": {
     "start": "webpack --config webpack.config.js"
   },
@@ -20,14 +20,19 @@
     "css-loader": "^6.5.1",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-functional": "^4.1.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-testing-library": "^5.0.4",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "node-sass": "^7.0.1",
+    "prettier": "^2.5.1",
+    "prettier-eslint": "^13.0.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.67.0",
